# cargo_loading_service

./: CMakeLists.txt  README.md  package.xml
docs/: node_graph.pu
include/cargo_loading_service/: cargo_loading_service.hpp
launch/: cargo_loading_service.launch.py  cargo_loading_service.launch.xml
src/: cargo_loading_service.cpp  cargo_loading_service_node.cpp
test/: README.md  node_communication_test.md
test/docs/: cargo_loading_service_test.md  node_communication_test.md
