<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!--
   Copyright 2023 Tier IV, Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<package format="3">
  <name>cargo_loading_service</name>
  <version>0.0.0</version>
  <description>The cargo_loading_service package</description>
  <maintainer email="yuma.nihei@tier4.jp">Yuma Nihei</maintainer>
  <license>Apache License 2.0</license>

  <author email="v-sugahara7993@esol.co.jp">Kentaro Sugahara</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cargo_loading_msgs</depend>
  <depend>in_parking_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tier4_api_utils</depend>
  <depend>v2i_interface_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
